kustomize/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant
          ports:
            - name: http
              containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homeassistant-config
