kustomize/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: homeassistant
